--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -170,7 +170,7 @@
         <!-- Submission Date Row -->
         <div class="d-flex justify-content-between align-items-center mb-2">
           <div><strong>SUBMISSION DATE</strong></div>
-          <div>15th August 2025</div>
+          <div>Will be updated soon</div>
         </div>
         <hr class="my-2">
 
@@ -231,3 +231,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
