--- a/past-issues.html
+++ b/past-issues.html
@@ -49,7 +49,7 @@
                 <li><a class="dropdown-item" href="submit-paper.html"><strong>SUBMIT PAPER ONLINE</strong></a></li>
                 <li><a class="dropdown-item" href="fee.html"><strong>PAY PUBLICATION FEE</strong></a></li>
                 <li><a class="dropdown-item" href="Track.html"><strong>TRACK PAPER</strong></a></li>
-                <li><a class="dropdown-item" href="paper-formate.html"><strong>COPY RIGHT FORM</strong></a></li>
+                <li><a class="dropdown-item" href="https://drive.google.com/file/d/1COMoB8tdimtmySJkbb4jeWtStQoUVcZ8/view"><strong>COPY RIGHT FORM</strong></a></li>
                 <li><a class="dropdown-item" href="paper-formate.html"><strong>SAMPLE PAPER FORMATE</strong></a></li>
                 <li><a class="dropdown-item" href="topic.html"><strong>TOPIC</strong></a></li>
               </ul>
@@ -243,3 +243,4 @@
 <script src="past-issues-script.js"></script>
 </body>
 </html>
+
