--- a/submit-paper.html
+++ b/submit-paper.html
@@ -151,7 +151,7 @@ color: white !important;
                 <li><a class="dropdown-item" href="submit-paper.html"><strong>SUBMIT PAPER ONLINE</strong></a></li>
                 <li><a class="dropdown-item" href="fee.html"><strong>PAY PUBLICATION FEE</strong></a></li>
                 <li><a class="dropdown-item" href="Track.html"><strong>TRACK PAPER</strong></a></li>
-                <li><a class="dropdown-item" href="https://drive.google.com/file/d/1H6kkOrtpOzirpOZS410CdjDh3TPBdZxA/view?usp=drive_link"><strong>COPY RIGHT FORM</strong></a></li>
+                <li><a class="dropdown-item" href="https://drive.google.com/file/d/1COMoB8tdimtmySJkbb4jeWtStQoUVcZ8/view"><strong>COPY RIGHT FORM</strong></a></li>
                 <li><a class="dropdown-item" href="paper-formate.html"><strong>SAMPLE PAPER FORMATE</strong></a></li>
                 <li><a class="dropdown-item" href="topic.html"><strong>TOPIC</strong></a></li>
               </ul>
@@ -396,5 +396,6 @@ color: white !important;
 </script>
 </body>
 </html>
+
 
 
